Fix z-index of all components

--- a/src/components/Toolbar/Menu/Menu.css
+++ b/src/components/Toolbar/Menu/Menu.css
@@ -2,7 +2,7 @@
   position: fixed;
   top: 5rem;
   right: 0;
-  z-index: 2;
+  z-index: 19;
   width: 220px;
   padding: 3rem;
   display: flex;
