--- a/src/components/Toolbar/Toolbar.css
+++ b/src/components/Toolbar/Toolbar.css
@@ -4,7 +4,7 @@
   height: 5rem;
   top: 0;
   left: 0;
-  z-index: 3;
+  z-index: 20;
   display: flex;
   justify-content: space-between;
   align-items: center;
